# P2P_Platform

./: Cargo.toml  README.md
docs/: index.html
docs/p2p_platform/: all.html  constant.NONCE_LENGTH.html  constant.PBKDF2_ITERATIONS.html  enum.Mode.html  fn.decrypt_aes.html  fn.decrypt_des.html  fn.derive_key.html  fn.encrypt_aes.html  fn.encrypt_des.html  fn.main.html  index.html  sidebar-items.js  struct.MyApp.html
src/: file_crypto.rs  image_crypto.rs  lib.rs  main.rs  network.rs
tests/: file_TEST.rs  image_TEST.rs
tests/sample_folder/: test_file.txt
