[package]
name = "P2P_Platform"
version = "0.1.0"
edition = "2021"

[package.metadata]

[dependencies]
aes-gcm = "0.10"
aes = "0.8"
rand = "0.8"
rand_core = "0.6"
sha2 = "0.10"
pbkdf2 = "0.11"
base64 = "0.21"
hmac = "0.12.1"
des = "0.8"
cbc = "0.1"
cipher = "0.4"

# GUI things
eframe = "0.27"

[dependency.base64ct]
version = "1.7.3"

